Fixes spacing on mobile

--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ nav{
 
 .card {
     margin: auto;
-    margin-top: 50px;
+    margin-top: 2rem;
+    max-width: 18rem;
 }
 
 @media (min-width: 576px){
@@ -122,7 +123,7 @@ nav{
 
 .partner {
     margin: auto;
-    margin-top: 50px;
+    margin-top: 2rem;
     max-width: 250px;
     max-height: 150px;
 }
